modifikasi video wrapper untuk menambahkan iframe

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </ul>
     </nav>
 
+
     <header class="hero">
         <div class="hero-left">
             <h1>Hi, I'm</h1>
@@ -51,10 +52,14 @@
         </p>
         
         <div class="video-wrapper">
-            <video controls>
-                <source src="assets/video/profile-video.mp4" type="video/mp4">
-                Browser Anda tidak mendukung video tag.
-            </video>
+            <iframe 
+                src="https://www.youtube.com/embed/IDV9vKwgYTM?si=MgjybrrgmkBHFiZF" 
+                title="YouTube video player" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                referrerpolicy="strict-origin-when-cross-origin" 
+                allowfullscreen>
+            </iframe>  
         </div>
     </section>
 
@@ -168,7 +173,6 @@
     </footer>
 
     <script>
-        // Smooth scroll untuk navigasi
         document.querySelectorAll('.nav-links a').forEach(anchor => {
             anchor.addEventListener('click', function(e) {
                 e.preventDefault();
