--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-
+    <!-- Navigasi -->
     <nav class="navbar">
         <div class="nav-brand">My Portofolio</div>
         <ul class="nav-links">
@@ -20,7 +20,7 @@
         </ul>
     </nav>
 
-
+    <!-- Hero Section -->
     <header class="hero">
         <div class="hero-left">
             <h1>Hi, I'm</h1>
@@ -42,6 +42,7 @@
         </div>
     </header>
 
+    <!-- Tentang Saya -->
     <section id="about" class="section about">
         <h2>Tentang Saya</h2>
         <p>
@@ -63,6 +64,7 @@
         </div>
     </section>
 
+    <!-- Riwayat -->
     <section id="riwayat" class="section riwayat">
         <h2>Riwayat</h2>
         <div class="grid">
@@ -88,6 +90,7 @@
         </div>
     </section>
 
+    <!-- Skills -->
     <section id="skills" class="section skills">
         <h2>Keterampilan</h2>
         <div class="skills-list">
@@ -100,6 +103,7 @@
         </div>
     </section>
 
+    <!-- Portofolio -->
     <section id="portofolio" class="section portofolio">
         <h2>Proyek</h2>
         <div class="grid">
@@ -116,6 +120,7 @@
         </div>
     </section>
 
+    <!-- Galeri Kegiatan -->
     <section id="galeri" class="section galeri">
         <h2>Galeri Kegiatan</h2>
             <div class="galeri-grid">
@@ -146,6 +151,7 @@
             </div>
     </section>
 
+    <!-- Kontak -->
     <section id="kontak" class="section kontak">
         <h2>Kontak</h2>
         <p>Mari terhubung melalui media berikut:</p>
@@ -168,10 +174,12 @@
         </div>
     </section>
 
+    <!-- Footer -->
     <footer>
         © 2025 Hisyam Khaeru Umam. Terima kasih sudah berkunjung ke portofolio saya. Mari terhubung!
     </footer>
 
+    <!-- smooth scrooling -->
     <script>
         document.querySelectorAll('.nav-links a').forEach(anchor => {
             anchor.addEventListener('click', function(e) {
